[package]
name = "datasus-dbc"
version = "0.1.1"
edition = "2021"

description = "Decompress DATASUS's *.dbc files into *.dbf files."
license = "MIT"
repository = "https://github.com/mymatsubara/datasus-dbc"
authors = ["Murilo Matsubara <murilo.matsubara@gmail.com>"]
documentation = "https://docs.rs/datasus-dbc"
readme = "README.md"

keywords = ["dbc", "datasus", "blast", "pkware", "dcl"]
categories = ["compression", "enconding", ]

[dependencies]
explode = "0.1.2"
